--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "@react-pdf/renderer": "^4.3.2",
+    "cloudinary": "^2.9.0",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.563.0",
+    "mathjs": "^15.1.0",
+    "mongoose": "^9.1.5",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
